<resources>
    <string name="app_name">HamaKeja</string>
    <string name="toasty">Toasty</string>
    <string name="looking_for_a_truck">Looking for a truck</string>
    <string name="i_own_a_truck">I own a truck</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="owner">Truck Owner</string>
    <string name="want_to_move">Want to move</string>
    <string name="start">Start</string>
    <string name="number">KCA 334Y</string>
    <string name="call">call</string>
    <string name="dimensions">6.01m x 2.34m x 2.69m</string>
    <string name="cubed">37.83m³</string>
    <string name="buruburu">Upperhill</string>
    <string name="image">image</string>
    <string name="api_key">7d06f2ccb4684321bb58dad3fc7c2b24</string>
</resources>