<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:cardCornerRadius="2dp"
        android:id="@+id/truck_card"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/truck_Image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/truck"
                    android:contentDescription="@string/image" />

                <TextView
                    android:id="@+id/truck_Number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/dark" />

                <TextView
                    android:id="@+id/parked_Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/buruburu"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/overall_Size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/dimensions"
                    android:textColor="@color/grey" />

                <TextView
                    android:id="@+id/carrying_Capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/parked_Location"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="179dp"
                    android:layout_marginTop="132dp"
                    android:layout_marginEnd="12dp"
                    android:layout_toEndOf="@+id/overall_Size"
                    android:text="@string/cubed" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="right"
                android:orientation="horizontal">


                <ImageButton
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_baseline_call_24"
                    android:id="@+id/call"
                    app:tint="@color/grey"
                    android:contentDescription="@string/call" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>